--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>
                 This project was coded by
                 <a href="https://github.com/gootec82" target="_blank">DevSpark</a> and
-                is <a href="#" target="_blank"> on GitHub</a> and
+                is <a href="https://github.com/Gootec82/homework.git" target="_blank"> on GitHub</a> and
                 <a href="#" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
