--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="weather-app">
         <header>
             <form id="search-form">
-                <input type="search" placeholder="Enter a city.." required class="search-input" id="search-input" />
+                <input type="search" placeholder="Type in city..." required class="search-input" id="search-input" />
                 <input type="submit" value="Search" class="search-button" />
             </form>
         </header>
@@ -27,7 +27,7 @@
                 <div>
                     <h1 class="current-city" id="current-city">Paris</h1>
                     <p class="current-details">
-                        <span id="current-date"></span>, moderate rain <br />
+                        <span id="current-date"></span>Moderate rain <br />
                         Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
                     </p>
                 </div>
@@ -41,7 +41,7 @@
             <p>
                 This project was coded by
                 <a href="https://github.com/gootec82" target="_blank">DevSpark</a> and
-                is <a href="https://github.com/Gootec82/homework.git" target="_blank"> on GitHub</a> and
+                is <a href="https://github.com/Gootec82/homework.git" target="_blank">Open code on GitHub</a> and
                 <a href="#" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
