--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 This project was coded by
                 <a href="https://github.com/gootec82" target="_blank">DevSpark</a> and
                 is <a href="https://github.com/Gootec82/homework.git" target="_blank">Open code on GitHub</a> and
-                <a href="#" target="_blank">hosted on Netlify</a>
+                <a href="https://myhomeweatherapp.netlify.app/" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
     </div>
