I did general updated including my api key

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <title>Meteo App</title>
+    <title>My weather App</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
 
         <footer>
             This project was coded by
-            <a href="https://github.com/gootec82" target="_blank"> Matt Delac</a>,
+            <a href="https://github.com/gootec82" target="_blank"> DevSpark</a>,
             is
             <a href="https://github.com/Gootec82/homework" target="_blank">open-sourced on GitHub</a>
             and
